/**
 * Camera mode.
 * @category Camera
 */
export enum TrackballMode {
  /**
   * Local orbit keeps its orientation to keep north direction at the same position relative to user.
   */
  Compass,
  /**
   * Local orbit is free to rotate.
   */
  Free,
}
