export default class Range {
  constructor(public from: number, public to: number) {}
}
