@startuml
scale 2
skinparam Linetype ortho
hide empty members
class GeoPosMapper 

class GeoPosition 

class GeoVisCore

abstract class Orbit 

class GlobalOrbit 
class LocalOrbit  

class AnimatedTransition<T extends Clonable<T>>
interface IEvent<T, K> <<external>>

class Range<T>
enum TrackballMode{
    Free
    Compass
}

abstract class Visualization

interface TrackballCamera 

class TrackballController  

TrackballController .|> TrackballCamera

TrackballCamera ..> Orbit
TrackballCamera ...> GeoPosition

TrackballController *---> AnimatedTransition
TrackballController *--> LocalOrbit
TrackballController *--> GlobalOrbit

GeoVisCore *-> TrackballController

TrackballCamera .up.> TrackballMode
TrackballController *-up-> TrackballMode
TrackballCamera .up..> Range
TrackballController *-up-> Range
TrackballCamera .up...> IEvent
TrackballController *-up---> IEvent

Orbit .> GeoPosMapper
Orbit ..> GeoPosition
GeoPosition <. GeoPosMapper
LocalOrbit --|> Orbit
GlobalOrbit --|> Orbit

TrackballCamera <. Visualization
@enduml